--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,50 @@
 .rotate-img {
     transform: rotateY(180deg);
 }
+
+@layer base {
+    .dots {
+        display: flex;
+        padding: 0.625em 0;
+        justify-content: center;
+    }
+
+    .dot {
+        border: none;
+        width: 0.725em;
+        height: 0.725em;
+        background: #c5c5c5;
+        border-radius: 50%;
+        margin: 0 5px;
+        cursor: pointer;
+    }
+
+    .dot:focus {
+        outline: none;
+    }
+
+    .arrow {
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        fill: #fff;
+        cursor: pointer;
+    }
+
+    .arrow--left {
+        left: 5px;
+    }
+
+    .arrow--right {
+        left: auto;
+        right: 5px;
+    }
+
+    .arrow--disabled {
+        fill: rgba(255, 255, 255, 0.5);
+        cursor: default;
+    }
+}
